fix: miss alignment

--- a/src/component/Lyrics/style.module.scss
+++ b/src/component/Lyrics/style.module.scss
@@ -30,12 +30,10 @@
       }
 
       &.current {
+        font-weight: bold;
+
         .syllable {
           opacity: 1 !important;
-
-          .mask {
-            font-weight: bold;
-          }
         }
       }
 
